Functional implementation of the article editor. Remains to be tested.

--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
           <li data-wysihtml5-command="insertImage" title="Insert an image" class="command"></li>
           <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h1" title="Insert headline 1" class="command"></li>
           <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h2" title="Insert headline 2" class="command"></li>
-          <li data-wysihtml5-command-group="foreColor" class="fore-color" title="Color the selected text" class="command">
+          <li data-wysihtml5-command-group="foreColor" class="wysihtml5-fore-color" title="Color the selected text" class="command">
             <ul>
               <li data-wysihtml5-command="foreColor" data-wysihtml5-command-value="silver"></li>
               <li data-wysihtml5-command="foreColor" data-wysihtml5-command-value="gray"></li>
