Added an autosave. Bit of cleanup.

--- a/src/index.html
+++ b/src/index.html
@@ -287,7 +287,7 @@
   <!-- /DEBUG -->
 
   <!-- JS:LIB:BEGIN -->
-  <script src="js/libs/jquery-ui-1.8.11.custom.complete.min.js"></script>
+  <script src="js/libs/jquery-ui-1.8.11.custom.min.js"></script>
   <script src="js/libs/dragscrollable.js"></script>
   <script src="js/libs/jquery.hotkeys.js"></script>
   <script src="js/libs/jquery.mousewheel.js"></script>
@@ -296,13 +296,6 @@
   <script src="js/libs/swfobject.js"></script>
   <script src="js/libs/downloadify.min.js"></script>
   <script src="js/libs/events.js"></script>
-  <!--
-  <script src="js/libs/jquery.colorbox-min.js"></script>
-  <script src="js/libs/aloha/lib/require.js"></script>
-  <script>define('jquery', function(){ return window.jQuery; });</script>
-  <script>define('jqueryui', function(){ return window.jQuery.ui; });</script>
-  <script src="js/libs/aloha/lib/aloha.js" data-aloha-plugins="common/ui,common/format,common/highlighteditables,common/link"></script>
-  -->
   <script src="js/libs/wysihtml5/parser_rules/advanced.js"></script>
   <script src="js/libs/wysihtml5/dist/wysihtml5-0.3.0.min.js"></script>
   
